# spack-sdploy

./: .gitignore  README.md  init.sh  packages.yaml  repos.yaml  setup-2.sh  setup.sh  spack.yaml
.2del/templates/: packages.yaml.j2  spack.yaml.j2
config/: sdploy.yaml
docs/: sdploy.md
jenkins/deploy/: Jenkinsfile  Jenkinsfile.bckp  setup-vars.sh.bckp
samples/: stack.yaml
samples/stack/: common.yaml  stack.yaml
sdploy/: activate_pkgs.py  common_parser.py  concretizer_yaml.py  config.py  config_manager.py  config_yaml.py  mirrors_yaml.py  modules_yaml.py  packages.py  packages_yaml.py  pe.py  read_compilers.py  read_leafs.py  repos_yaml.py  spack_yaml.py  stack_file.py  util.py  yaml_manager.py
sdploy/cmd/: add_compilers.py  add_mirror.py  clone_external_repos.py  create_environments.py  install_c.py  install_compilers.py  list_compilers.py  list_mirrors.py  read_compilers.py  readc.py  repos_yaml.py  s_compiler.py  s_location.py  write_activate_list.py  write_concretizer_yaml.py  write_config_yaml.py  write_mirrors_yaml.py  write_modules_yaml.py  write_packages_yaml.py  write_repos_yaml.py  write_spack_yaml.py
stacks/: common.yaml  common.yaml.bckp  syrah.yaml
stacks/intel/: common.yaml  intel.yaml
stacks/laptop/: common.yaml  laptop.yaml  laptop.yaml.bckp
stacks/laptop-l1/: common.yaml
stacks/mkl/: common.yaml  mkl.yaml
templates/: common.yaml.j2  packages.yaml.j2  spack.yaml.j2
yareed/: pyproject.toml  setup.py
yareed/yareed/: main.py
yareed/yareed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+78 files in other folders)
